Fix [Function Configuration] "Image name" bubble info long text overflow (#1402)

--- a/src/igz_controls/components/more-info/more-info.less
+++ b/src/igz_controls/components/more-info/more-info.less
@@ -70,6 +70,7 @@
         font-weight: 400;
         white-space: pre-line;
         line-height: normal;
+        overflow-wrap: break-word;
 
         &::before {
             position: absolute;
